--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "realrashid/sweet-alert": "^7.2",
         "stripe/stripe-php": "^16.4"
     },
     "require-dev": {
